--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-blob-util": "^0.17.0",
+    "react-native-pdf": "^6.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
