--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-blob-util": "^0.17.0",
+    "react-native-document-picker": "^8.1.3",
     "react-native-pdf": "^6.6.2"
   },
   "devDependencies": {
